BUGFIX: Uploads save button not visible (Trac #7294)
Fixed the calculation of height for the upload (non AssetUploads) area
so that the save button would show. Took off the min-height, as this
will cause UI issues when there are multiple files open for editing.

--- a/scss/UploadField.scss
+++ b/scss/UploadField.scss
@@ -79,7 +79,6 @@
 	.ss-uploadfield-files {
 		margin: 0;
 		padding: 0;
-		max-height: 272px;
 		overflow: auto;
 		position: relative;
 		
